ResourcesService renamed to FileAccessService.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@45 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -50,20 +50,20 @@ oscar.auto.start.2= \
 
 oscar.auto.start.3= \
  file:sc-bundles/configuration.jar \
- file:sc-bundles/media.jar \
  file:sc-bundles/netaddr.jar
 
 oscar.auto.start.4= \
  file:sc-bundles/protocol-sip.jar \
- file:sc-bundles/resources.jar \
- file:sc-bundles/history.jar
+ file:sc-bundles/fileaccess.jar \
+ file:sc-bundles/history.jar \
+ file:sc-bundles/media.jar
 
 oscar.auto.start.5= \
  file:sc-bundles/slickless.jar \
  file:sc-bundles/configuration-slick.jar \
  file:sc-bundles/media-slick.jar \
  file:sc-bundles/netaddr-slick.jar \
- file:sc-bundles/resources-slick.jar \
+ file:sc-bundles/fileaccess-slick.jar \
  file:sc-bundles/history-slick.jar
 
 
