--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -45,7 +45,7 @@ oscar.auto.start.3= \
  file:sc-bundles/netaddr.jar
 
 oscar.auto.start.4= \
- file:sc-bundles/resources.jar \
+ file:sc-bundles/fileaccess.jar \
  file:sc-bundles/history.jar
 
 # Uncomment the following lines if you want to run the architect viewer
