--- a/build.xml
+++ b/build.xml
@@ -215,7 +215,7 @@
                         ConfigurationServiceLick
                         MediaServiceLick
                         NetworkAddressManagerServiceLick
-                        ResourcesServicesLick
+                        FileAccessServiceLick
                         HistoryServiceLick
                         SlicklessTests
                         "/>
@@ -309,7 +309,7 @@
         depends="bundle-util,bundle-configuration,bundle-history,
         bundle-history-slick,bundle-configuration-slick,bundle-netaddr,
         bundle-netaddr-slick,bundle-slickless,bundle-slick-runner,bundle-sip,
-        bundle-resources,bundle-resources-slick,bundle-media,bundle-media-slick"/>
+        bundle-fileaccess,bundle-fileaccess-slick,bundle-media,bundle-media-slick"/>
     <!--BUNDLE-HISTORY-->
     <target name="bundle-history" depends="rebuild">
         <jar compress="false" destfile="${bundles.dest}/history.jar"
@@ -319,11 +319,6 @@
                 prefix="net/java/sip/communicator/service/history"/>
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/history"
                 prefix="net/java/sip/communicator/impl/history" />
-
-            <zipfileset dir="${dest}/net/java/sip/communicator/service/protocol"
-                prefix="net/java/sip/communicator/service/protocol">
-                <include name="Contact*"/>
-            </zipfileset>
         </jar>
     </target>
 
@@ -336,24 +331,24 @@
         </jar>
     </target>
 
-    <!--BUNDLE-RESOURCES-->
-    <target name="bundle-resources" depends="rebuild">
-        <jar compress="false" destfile="${bundles.dest}/resources.jar"
-            manifest="src/net/java/sip/communicator/impl/resources/resources.manifest.mf">
+    <!--BUNDLE-FILEACCESS-->
+    <target name="bundle-fileaccess" depends="rebuild">
+        <jar compress="false" destfile="${bundles.dest}/fileaccess.jar"
+            manifest="src/net/java/sip/communicator/impl/fileaccess/fileaccess.manifest.mf">
 
-            <zipfileset dir="${dest}/net/java/sip/communicator/service/resources"
-                prefix="net/java/sip/communicator/service/resources"/>
-            <zipfileset dir="${dest}/net/java/sip/communicator/impl/resources"
-                prefix="net/java/sip/communicator/impl/resources" />
+            <zipfileset dir="${dest}/net/java/sip/communicator/service/fileaccess"
+                prefix="net/java/sip/communicator/service/fileaccess"/>
+            <zipfileset dir="${dest}/net/java/sip/communicator/impl/fileaccess"
+                prefix="net/java/sip/communicator/impl/fileaccess" />
         </jar>
     </target>
 
-    <!--BUNDLE-RESOURCES-SLICK-->
-    <target name="bundle-resources-slick" depends="rebuild">
-        <jar compress="false" destfile="${bundles.dest}/resources-slick.jar"
-            manifest="test/net/java/sip/communicator/slick/resources/resources.slick.manifest.mf">
-            <zipfileset dir="${dest}/net/java/sip/communicator/slick/resources"
-                prefix="net/java/sip/communicator/slick/resources"/>
+    <!--BUNDLE-FILEACCESS-SLICK-->
+    <target name="bundle-fileaccess-slick" depends="rebuild">
+        <jar compress="false" destfile="${bundles.dest}/fileaccess-slick.jar"
+            manifest="test/net/java/sip/communicator/slick/fileaccess/fileaccess.slick.manifest.mf">
+            <zipfileset dir="${dest}/net/java/sip/communicator/slick/fileaccess"
+                prefix="net/java/sip/communicator/slick/fileaccess"/>
         </jar>
     </target>
 
