improve ant usage help listing
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@49 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -76,7 +76,8 @@
   <!-- Ant-internal target does not appear in its own help display  -->
     <target name="usage" >
        <echo message="execute 'ant -projecthelp' for useful build targets" />
-       <echo message="execute 'ant rebuild' for clean/build/test operation" />
+       <echo message="execute 'ant rebuild' for a clean/build/test sequence" />
+       <echo message="execute 'ant cc-buildloop' for a cruise control build cycle" />
        <echo message="execute 'ant -help' for Ant help" />
     </target>
 
