netbeans debug target should have been internal
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@50 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -261,12 +261,15 @@
     </target>
 
     <target name="cc-buildloop" depends="rebuild,bundles,test"/>
+    
+    
     <!-- - - NetBeans Targets for specific files selected via ide-actions - -->
 
     <!--netbeans only - debug a single test file under oscar and jUnit-->
     <target name="debug-selected-file"
-            depends="init,init,prepare-single-test,prepare-all-tests"
-            description="starts oscar and runs selected Service Impl Compatibility Kit">
+            depends="init,init,prepare-single-test,prepare-all-tests">
+        <!--internal-target- starts oscar and debugs the selected 
+                             Service Impl Compatibility Kit -->
 
       <fail unless="test.name"
             message="debug impossible when 'test.name' property not defined!" />
