ant test target should depend on make target to ensure dependent files are up-to-date
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@51 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -199,7 +199,7 @@
     <!-- - - - - - - - - - - - - - UNIT TESTING - - - - - - - - - - - - - - -->
 
     <!--PREPARE-TESTS-->
-    <target name="identify-test">
+    <target name="identify-test" depends="make">
         <!--internal-target- identify Service Impl Compatibility Kits to run -->
         <condition property="test.name.known">
             <!-- has a single test class has been defined?    -->
