debug target had init dependency twice - finger trouble..
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@52 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -267,7 +267,7 @@
 
     <!--netbeans only - debug a single test file under oscar and jUnit-->
     <target name="debug-selected-file"
-            depends="init,init,prepare-single-test,prepare-all-tests">
+            depends="init,prepare-single-test,prepare-all-tests">
         <!--internal-target- starts oscar and debugs the selected 
                              Service Impl Compatibility Kit -->
 
