first attempt of ant run target and netbeans run ide-action
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@58 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -257,6 +257,27 @@
         </java>
     </target>
 
+    <!--RUN-SIP-CMMUNICATOR-->
+    <target name="run" depends="compile,resource"
+        description="Starts oscar and runs sip-comunicator gui.">
+
+        <java classname="org.ungoverned.oscar.Main"
+            fork="true"
+            failonerror="true"
+            classpathref="project.class.path">
+
+            <!-- Tell oscar to run sip-communicator-->
+            <sysproperty key="oscar.config.properties"
+                value="file:./lib/oscar.client.run.properties"/>
+
+            <!-- Tell java.util.logging about our logging preferences -->
+            <sysproperty key="java.util.logging.config.file"
+                value="lib/logging.properties"/>
+
+        </java>
+    </target>
+
+    <!--CRUISE CONTROL BUILD LOOP target-->
     <target name="cc-buildloop" depends="rebuild,bundles,test"
             description="Comprehensive rebuild and test (used by Cruise Control)."/>
     
