added joscar and joustsim for icq support. added retroweaver needed by joscar. added xalan for building html test reports
added oscar to the test execution environment.


git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@79 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -56,6 +56,7 @@ oscar.auto.start.4= \
  file:sc-bundles/protocol-sip.jar \
  file:sc-bundles/fileaccess.jar \
  file:sc-bundles/history.jar \
+ file:sc-bundles/protocol-icq.jar \
  file:sc-bundles/media.jar
 
 oscar.auto.start.5= \
@@ -64,8 +65,8 @@ oscar.auto.start.5= \
  file:sc-bundles/media-slick.jar \
  file:sc-bundles/netaddr-slick.jar \
  file:sc-bundles/fileaccess-slick.jar \
- file:sc-bundles/history-slick.jar
-
+ file:sc-bundles/history-slick.jar \
+ file:sc-bundles/protocol-icq-slick.jar
 
 oscar.auto.start.100= \
  file:sc-bundles/slick-runner.jar
