--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -39,7 +39,7 @@ java.util.logging.FileHandler.limit = 50000
 java.util.logging.FileHandler.count = 1
 java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
 
-# Limit the message that are printed on the console to FINE and above.
+# Limit the message that are printed on the console to FINEST and above (all).
 java.util.logging.ConsoleHandler.level = FINEST
 java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLogFormatter
 
@@ -49,6 +49,14 @@ java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLo
 # Provides extra control for each logger.
 ############################################################
 
+# We don't want trace logs from joscar and joustsim
+net.kano.level = INFO
+# But we want everything coming from the sip-comm
+net.java.sip.communicator.service.protocol.level = FINEST
+net.java.sip.communicatserverStoredGroupListenersor.impl.protocol.level = FINEST
+net.java.sip.communicator.slick.protocol.level = FINEST
+
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
 com.xyz.foo.level = SEVERE
+
